--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ document.getElementById('toggleMenu').onclick = function () {
 
     const fileList = [
         "canvassed_art_points.geojson",
-        "ABQ_points.geojson",
+        "cleaned_ABQ_points.geojson",
         "AllSpecialZones_Chililigrant.geojson",
         "AllSpecialZones_Isleta.geojson",
         "AllSpecialZones_Tohajiilee.geojson",
@@ -201,7 +201,7 @@ document.getElementById('toggleMenu').onclick = function () {
 	
 const prettyNames = {
   "canvassed_art_points.geojson": "Canvassed Art Points",
-  "ABQ_points.geojson": "Albuquerque Reference Points",
+  "cleaned_ABQ_points.geojson": "Albuquerque Reference Points",
   "AllSpecialZones_Chililigrant.geojson": "Chilili Land Grant Zones",
   "AllSpecialZones_Isleta.geojson": "Isleta Zones",
   "AllSpecialZones_Tohajiilee.geojson": "To’Hajiilee Zones",
@@ -322,15 +322,25 @@ fileList.sort((a, b) => {
 const filteredEntries = Object.entries(props).filter(([k, v]) => v !== null && v !== "null" && v !== "NA");
 
 const popupContent = `
-    <div style="display: grid; grid-template-columns: auto auto; column-gap: 10px; row-gap: 6px; font-size: 13px;">
-        ${filteredEntries.map(([k, v]) => {
-            const displayValue = typeof v === 'string' && v.length > 30 ? v.slice(0, 30) + "…" : v;
-            return `
-                <div style="font-weight: bold;">${k}:</div>
-                <div>${displayValue}</div>
-            `;
-        }).join("")}
-    </div>`;
+  <div style="
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 10px;
+    row-gap: 6px;
+    font-size: 13px;
+    word-wrap: break-word;
+    word-break: break-word;
+    max-width: 300px;
+  ">
+    ${filteredEntries.map(([k, v]) => {
+      const displayValue = typeof v === 'string' && v.length > 60 ? v.slice(0, 60) + "…" : v;
+      return `
+        <div style="font-weight: bold;">${k}:</div>
+        <div style="overflow-wrap: break-word;">${displayValue}</div>
+      `;
+    }).join("")}
+  </div>`;
+
 
 
                                 layerEl.bindPopup(`<b>${displayName}</b><hr>${popupContent}`);
