--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ const prettyNames = {
   "ArtworkwithArtistSignatureonly.geojson": "Artworks with Artist Signatures",
   "Book1_countyartjan6_ExportTable_XYTableToPoint.geojson": "County Art Points (Jan 6 Export)",
   "CanvassedArtwork_1mile_hospitals.geojson": "Art Within 1 Mile of Hospitals",
-  "CanvassedArtwork_480within1mileforest.geojson": "480 Art Points Near Forests",
+  "CanvassedArtwork_480within1mileforest.geojson": "Art Points Near Forests",
   "CanvassedArtwork_ExcludingCityParks_1mileOpenSpace.geojson": "Art Within 1 Mile of Open Space (No City Parks)",
   "CanvassedArtwork_ExportFeatures1milepolice.geojson": "Art Within 1 Mile of Police",
   "CanvassedArtwork_K12_anduni.geojson": "Art Near Schools & Universities",
