--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ document.getElementById('toggleMenu').onclick = function () {
         "Censustracts_80AMI_andbelow_ExportFeatures.geojson",
         "Censustracts_80AMI_andbelow_lowtonoartwork.geojson",
         "CitiesCommunities_ExportFeatures.geojson",
-        "CityParks_PairwiseClip.geojson",
+        "cleaned_CityParks_PairwiseClip.geojson",
         "City_only.geojson",
         "City_only_points.geojson",
         "CountyCity_ArtistSigsonly.geojson",
@@ -221,7 +221,7 @@ const prettyNames = {
   "Censustracts_80AMI_andbelow_ExportFeatures.geojson": "Census Tracts ≤ 80% AMI",
   "Censustracts_80AMI_andbelow_lowtonoartwork.geojson": "Low/No Artwork in ≤ 80% AMI Tracts",
   "CitiesCommunities_ExportFeatures.geojson": "Cities and Communities",
-  "CityParks_PairwiseClip.geojson": "City Parks (Clipped)",
+  "cleaned_CityParks_PairwiseClip.geojson": "City Parks (Clipped)",
   "City_only.geojson": "City Boundary",
   "City_only_points.geojson": "City Points",
   "CountyCity_ArtistSigsonly.geojson": "County + City: Artist Signatures Only",
