--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@ document.getElementById('toggleMenu').onclick = function () {
         "cleaned_ABQ_points.geojson",
         "cleaned_AllSpecialZones_Chililigrant.geojson",
         "AllSpecialZones_Isleta.geojson",
-        "AllSpecialZones_Tohajiilee.geojson",
-        "AllSpecialZones_Tohajiilee_tribal.geojson",
-        "AllSpecialZones_iselta_library.geojson",
-        "AllSpecialZones_iseltapolice.geojson",
+        "cleaned_AllSpecialZones_Tohajiilee.geojson",
+        "cleaned_AllSpecialZones_Tohajiilee_tribal.geojson",
+        "cleaned_AllSpecialZones_iselta_library.geojson",
+        "cleaned_AllSpecialZones_iseltapolice.geojson",
         "ArtworkwithArtistSignatureonly.geojson",
         "Book1_countyartjan6_ExportTable_XYTableToPoint.geojson",
         "CanvassedArtwork_1mile_hospitals.geojson",
@@ -182,7 +182,7 @@ document.getElementById('toggleMenu').onclick = function () {
         "RoadInventory_Erase.geojson",
         "RoadInventory_Erase1.geojson",
         "SPECIALZONES_Original_ExportTable_XYTableToPoint.geojson",
-        "Tohajiilee_artwork_specialpoints.geojson",
+        "cleaned_Tohajiilee_artwork_specialpoints.geojson",
         "TrainStops_ExportFeatures.geojson",
         "Walkability_Bern_ARTJOIN.geojson",
         "WalkabilityandArtDensity_ExportFeatures.geojson",
@@ -199,11 +199,11 @@ const prettyNames = {
   "canvassed_art_points.geojson": "Canvassed Art Points",
   "cleaned_ABQ_points.geojson": "Albuquerque Reference Points",
   "cleaned_AllSpecialZones_Chililigrant.geojson": "Chilili Land Grant Zones",
-  "AllSpecialZones_Isleta.geojson": "Isleta Zones",
-  "AllSpecialZones_Tohajiilee.geojson": "To’Hajiilee Zones",
-  "AllSpecialZones_Tohajiilee_tribal.geojson": "To’Hajiilee Tribal Zones",
-  "AllSpecialZones_iselta_library.geojson": "Isleta Library",
-  "AllSpecialZones_iseltapolice.geojson": "Isleta Police Station",
+  "cleaned_AllSpecialZones_Isleta.geojson": "Isleta Zones",
+  "cleaned_AllSpecialZones_Tohajiilee.geojson": "To’Hajiilee Zones",
+  "cleaned_AllSpecialZones_Tohajiilee_tribal.geojson": "To’Hajiilee Tribal Zones",
+  "cleaned_AllSpecialZones_iselta_library.geojson": "Isleta Library",
+  "cleaned_AllSpecialZones_iseltapolice.geojson": "Isleta Police Station",
   "ArtworkwithArtistSignatureonly.geojson": "Artworks with Artist Signatures",
   "Book1_countyartjan6_ExportTable_XYTableToPoint.geojson": "County Art Points (Jan 6 Export)",
   "CanvassedArtwork_1mile_hospitals.geojson": "Art Within 1 Mile of Hospitals",
@@ -239,7 +239,7 @@ const prettyNames = {
   "KnownCity.geojson": "Known City Boundaries",
   "KnownCounty.geojson": "Known County Boundaries",
   "KnownInventory.geojson": "Known Art Inventory",
-  "cleaned_NM_CensusTracts2020__Project.geojson": "NM Census Tracts (2020)",
+  "cleaned_.geojson": "NM Census Tracts (2020)",
   "cleaned_NM_CensusTracts2020__Project_ExportFeatures.geojson": "NM Census Tracts (2020 Exported)",
   "NationalWalkabilityIndex_NewMexico.geojson": "Walkability Index (New Mexico)",
   "New_Mexico_walk_Bern.geojson": "Walkability: Bernalillo County",
