--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ document.getElementById('toggleMenu').onclick = function () {
 
     const fileList = [
         "canvassed_art_points.geojson",
+	"CountyBoundary",
         "cleaned_ABQ_points.geojson",
         "cleaned_AllSpecialZones_Chililigrant.geojson",
         "AllSpecialZones_Isleta.geojson",
@@ -197,6 +198,7 @@ document.getElementById('toggleMenu').onclick = function () {
 	
 const prettyNames = {
   "canvassed_art_points.geojson": "Canvassed Art Points",
+  "CountyBoundary.geojson": "Bernalillo County boundary",
   "cleaned_ABQ_points.geojson": "Albuquerque Reference Points",
   "cleaned_AllSpecialZones_Chililigrant.geojson": "Chilili Land Grant Zones",
   "cleaned_AllSpecialZones_Isleta.geojson": "Isleta Zones",
