--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ document.getElementById('toggleMenu').onclick = function () {
 
     const fileList = [
         "canvassed_art_points.geojson",
-	"CountyBoundary",
+	"CountyBoundary.geojson",
         "cleaned_ABQ_points.geojson",
         "cleaned_AllSpecialZones_Chililigrant.geojson",
         "AllSpecialZones_Isleta.geojson",
