--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@ document.getElementById('toggleMenu').onclick = function () {
 
     const fileList = [
         "canvassed_art_points.geojson",
-	"CountyBoundary.geojson",
+		"CountyBoundary.geojson",
+		"CountyCommissionDistricts.geojson",
         "cleaned_ABQ_points.geojson",
         "cleaned_AllSpecialZones_Chililigrant.geojson",
         "AllSpecialZones_Isleta.geojson",
@@ -158,7 +159,6 @@ document.getElementById('toggleMenu').onclick = function () {
         "City_only.geojson",
         "City_only_points.geojson",
         "CountyCity_ArtistSigsonly.geojson",
-        "CountyCity_Identifier.geojson",
         "CountyCity_Identifier_Citystats.geojson",
         "CountyCity_Identifier_Citystats_countystats_All.geojson",
         "CountyCity_ethnicity_sub.geojson",
@@ -174,19 +174,12 @@ document.getElementById('toggleMenu').onclick = function () {
         "KnownInventory.geojson",
         "cleaned_NM_CensusTracts2020__Project.geojson",
         "cleaned_NM_CensusTracts2020__Project_ExportFeatures.geojson",
-        "NationalWalkabilityIndex_NewMexico.geojson",
-        "New_Mexico_walk_Bern.geojson",
-        "New_Mexico_walk_PairwiseClip.geojson",
-        "New_Mexico_walk__SpatialJoin.geojson",
         "NineLandGrant_Merge.geojson",
         "OpenSpace_PairwiseClip.geojson",
-        "RoadInventory_Erase.geojson",
-        "RoadInventory_Erase1.geojson",
         "SPECIALZONES_Original_ExportTable_XYTableToPoint.geojson",
         "cleaned_Tohajiilee_artwork_specialpoints.geojson",
         "TrainStops_ExportFeatures.geojson",
         "Walkability_Bern_ARTJOIN.geojson",
-        "WalkabilityandArtDensity_ExportFeatures.geojson",
         "cleaned_WalkabilityandArtDensity_highwalkart.geojson",
         "c2020CensusTract_SpatialJoin.geojson",
         "c2020CensusTract_SpatialJoinfunds.geojson",
@@ -199,6 +192,7 @@ document.getElementById('toggleMenu').onclick = function () {
 const prettyNames = {
   "canvassed_art_points.geojson": "Canvassed Art Points",
   "CountyBoundary.geojson": "Bernalillo County boundary",
+  "CountyCommissionDistricts.geojson": "County Districts",
   "cleaned_ABQ_points.geojson": "Albuquerque Reference Points",
   "cleaned_AllSpecialZones_Chililigrant.geojson": "Chilili Land Grant Zones",
   "cleaned_AllSpecialZones_Isleta.geojson": "Isleta Zones",
@@ -227,7 +221,6 @@ const prettyNames = {
   "City_only.geojson": "City Boundary",
   "City_only_points.geojson": "City Points",
   "CountyCity_ArtistSigsonly.geojson": "County + City: Artist Signatures Only",
-  "CountyCity_Identifier.geojson": "County + City: Area Identifiers",
   "CountyCity_Identifier_Citystats.geojson": "City-Level Statistics",
   "CountyCity_Identifier_Citystats_countystats_All.geojson": "City + County Statistics (All)",
   "CountyCity_ethnicity_sub.geojson": "County + City: Ethnicity Breakdown",
@@ -243,14 +236,8 @@ const prettyNames = {
   "KnownInventory.geojson": "Known Art Inventory",
   "cleaned_.geojson": "NM Census Tracts (2020)",
   "cleaned_NM_CensusTracts2020__Project_ExportFeatures.geojson": "NM Census Tracts (2020 Exported)",
-  "NationalWalkabilityIndex_NewMexico.geojson": "Walkability Index (New Mexico)",
-  "New_Mexico_walk_Bern.geojson": "Walkability: Bernalillo County",
-  "New_Mexico_walk_PairwiseClip.geojson": "Walkability (Clipped)",
-  "New_Mexico_walk__SpatialJoin.geojson": "Walkability (Spatial Join)",
   "NineLandGrant_Merge.geojson": "Nine Land Grants (Merged)",
   "OpenSpace_PairwiseClip.geojson": "Open Space (Clipped)",
-  "RoadInventory_Erase.geojson": "Road Inventory (Erased Version)",
-  "RoadInventory_Erase1.geojson": "Road Inventory (Alt. Erase)",
   "SPECIALZONES_Original_ExportTable_XYTableToPoint.geojson": "Original Special Zones (XY Points)",
   "Tohajiilee_artwork_specialpoints.geojson": "To’Hajiilee Special Art Points",
   "TrainStops_ExportFeatures.geojson": "Train Stops",
