--- a/index.html
+++ b/index.html
@@ -157,13 +157,12 @@ function getNextColor() {
         "cleaned_AllSpecialZones_iselta_library.geojson",
         "cleaned_AllSpecialZones_iseltapolice.geojson",
         "ArtworkwithArtistSignatureonly.geojson",
-        "Book1_countyartjan6_ExportTable_XYTableToPoint.geojson",
         "CanvassedArtwork_1mile_hospitals.geojson",
         "CanvassedArtwork_480within1mileforest.geojson",
         "CanvassedArtwork_ExcludingCityParks_1mileOpenSpace.geojson",
         "CanvassedArtwork_ExportFeatures1milepolice.geojson",
         "CanvassedArtwork_K12_anduni.geojson",
-	"university_college_1mileart.geojson",
+		"university_college_1mileart.geojson",
         "CanvassedArtwork_MultipleRingBuffer1.geojson",
         "CanvassedArtwork_swanson_BernCoParksOpenSpace.geojson",
         "CanvassedArtwork_swanson_partnermanagedspace.geojson",
@@ -183,7 +182,6 @@ function getNextColor() {
         "CountyPublicFund_ALLMEDIANzip_district.geojson",
         "County_only.geojson",
         "Countycity_publicFunds_Merge.geojson",
-        "Countycity_publicFunds_median.geojson",
         "EJSCREEN_StateP_PairwiseClip.geojson",
         "EPA_Air_Monitors.geojson",
         "cleaned_Isleta_Artwork_specialpoints.geojson",
@@ -199,16 +197,15 @@ function getNextColor() {
         "TrainStops_ExportFeatures.geojson",
         "Walkability_Bern_ARTJOIN.geojson",
         "cleaned_WalkabilityandArtDensity_highwalkart.geojson",
-        "c2020CensusTract_SpatialJoin.geojson",
-        "c2020CensusTract_SpatialJoinfunds.geojson",
         "cb_2020_35_joined.geojson",
-        "cb_2020_35_joined_ExportFeatures.geojson",
         "zipcodes__MODES.geojson"
     ];
 	
 	
 const prettyNames = {
   "canvassed_art_points.geojson": "_Canvassed Art Points",
+   "cleaned_NM_CensusTracts2020__Project.geojson": "Census Tracts 2020",
+   "cleaned_Tohajiilee_artwork_specialpoints.geojson": "To'hajiilee art points",
   "CountyBoundary.geojson": "Bernalillo County boundary",
   "CountyCommissionDistricts.geojson": "County Districts",
   "cleaned_ABQ_points.geojson": "Albuquerque Condition and Art Type",
@@ -219,13 +216,12 @@ const prettyNames = {
   "cleaned_AllSpecialZones_iselta_library.geojson": "Isleta Library",
   "cleaned_AllSpecialZones_iseltapolice.geojson": "Isleta Police Station",
   "ArtworkwithArtistSignatureonly.geojson": "Artworks with Artist Signatures",
-  "Book1_countyartjan6_ExportTable_XYTableToPoint.geojson": "County Art Points (Jan 6 Export)",
   "CanvassedArtwork_1mile_hospitals.geojson": "Art Within 1 Mile of Hospitals",
   "CanvassedArtwork_480within1mileforest.geojson": "Art Points Near Forests",
   "CanvassedArtwork_ExcludingCityParks_1mileOpenSpace.geojson": "Art Within 1 Mile of Open Space (No City Parks)",
   "CanvassedArtwork_ExportFeatures1milepolice.geojson": "Art Within 1 Mile of Police",
   "CanvassedArtwork_K12_anduni.geojson": "Art Near Schools & Universities",
-  "university_college_1mileart.geojson": " University/College 1 mile from art",
+  "university_college_1mileart.geojson": "University/College 1 mile from art",
   "CanvassedArtwork_MultipleRingBuffer1.geojson": "Art: Multiple Ring Buffers",
   "CanvassedArtwork_swanson_BernCoParksOpenSpace.geojson": "Swanson Art in BernCo Parks",
   "CanvassedArtwork_swanson_partnermanagedspace.geojson": "Swanson Art in Partner-Managed Spaces",
@@ -236,16 +232,15 @@ const prettyNames = {
   "Censustracts_80AMI_andbelow_lowtonoartwork.geojson": "Low/No Artwork in ≤ 80% AMI Tracts",
   "CitiesCommunities_ExportFeatures.geojson": "Cities and Communities",
   "cleaned_CityParks_PairwiseClip.geojson": "City Parks (Clipped)",
-  "City_only.geojson": "City Boundary",
+  "City_only.geojson": "Within City Areas",
   "City_only_points.geojson": "City Points",
   "CountyCity_ArtistSigsonly.geojson": "County + City: Artist Signatures Only",
-  "CountyCity_Identifier_Citystats.geojson": "City-Level Statistics",
+  "CountyCity_Identifier_Citystats.geojson": "Canvassed short summary",
   "CountyCity_Identifier_Citystats_countystats_All.geojson": "City + County Statistics (All)",
-  "CountyCity_ethnicity_sub.geojson": "County + City: Ethnicity Breakdown",
+  "CountyCity_ethnicity_sub.geojson": "Canvassed Ethnicity and Zipcode",
   "CountyPublicFund_ALLMEDIANzip_district.geojson": "Public Funds by ZIP Code District",
-  "County_only.geojson": "County Boundary",
+  "County_only.geojson": "County points only",
   "Countycity_publicFunds_Merge.geojson": "Merged Public Funding (City + County)",
-  "Countycity_publicFunds_median.geojson": "Median Public Funding (City + County)",
   "EJSCREEN_StateP_PairwiseClip.geojson": "EJSCREEN Indicators (Clipped)",
   "EPA_Air_Monitors.geojson": "EPA Air Quality Monitors",
   "cleaned_Isleta_Artwork_specialpoints.geojson": "Isleta: Special Art Points",
@@ -256,15 +251,11 @@ const prettyNames = {
   "cleaned_NM_CensusTracts2020__Project_ExportFeatures.geojson": "NM Census Tracts (2020 Exported)",
   "NineLandGrant_Merge.geojson": "Land Grants",
   "OpenSpace_PairwiseClip.geojson": "Open Space",
-  "SPECIALZONES_Original_ExportTable_XYTableToPoint.geojson": "Original Special Zones (XY Points)",
   "Tohajiilee_artwork_specialpoints.geojson": "To’Hajiilee Special Art Points",
   "TrainStops_ExportFeatures.geojson": "Train Stops",
   "Walkability_Bern_ARTJOIN.geojson": "Walkability + Art Density (Bernalillo)",
   "cleaned_WalkabilityandArtDensity_highwalkart.geojson": "High Walkability + Art Density",
-  "c2020CensusTract_SpatialJoin.geojson": "Census Tracts 2020 (Spatial Join)",
-  "c2020CensusTract_SpatialJoinfunds.geojson": "Census Tracts 2020 + Funds",
-  "cb_2020_35_joined.geojson": "Census Block (2020) - Joined",
-  "cb_2020_35_joined_ExportFeatures.geojson": "Census Block (2020) - Exported Features",
+  "cb_2020_35_joined.geojson": "Census Block (2020) New Mexico State",
   "zipcodes__MODES.geojson": "ZIP Codes: Most Common Art Type"
 };
 
